crates/agglayer-interop-types/src/aggchain_proof/snapshots/agglayer_interop_types__aggchain_proof__test__multisig-none.snap
---
source: crates/agglayer-interop-types/src/aggchain_proof/test.rs
expression: json_str
---
{
  "multisig": [
    null
  ]
}
